--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@vitejs/plugin-react": "^5.0.4",
     "better-sqlite3": "^12.4.1",
     "clsx": "^2.1.1",
+    "dom-to-image-more": "^3.7.2",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.546.0",
+    "modern-screenshot": "^4.6.8",
     "motion": "^12.23.24",
     "openai": "^6.22.0",
     "react": "^19.0.0",
